# reductus

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CITATION.cff  MANIFEST  MANIFEST.in  PolPlot2D.py  README.rst  __init__.py  anglecor.py  areacor.py  binder.py  canvas.py  cmapmenu.py  context.py  correction.py  corrections.py  data.py  docker-compose.yml  err1d.py  formatnum.py  formats.py  fresnel.py  icpformat.py  limits.py  napi.py  ncnr_ng1.py  ncnr_ng7.py  nexus.py  nexusref.py  normalize.py  normcor.py  nxs.py  nxstest.py  nxsunit.py  polcor.py  polcorgui.py  polcorplot.py  polplot.py  (+25 more)
configurations/: default.py  default_config.json
dataflow/: __init__.py  anno_exc.py  automod.py  cache.py  calc.py  configure.py  core.py  data.py  deps.py  doi_resolve.py  fakeredis.py  fetch.py  git_revision  ordered_dict.py  pycache.py  rev.py  rst2html.py  sample_reduction.py  store.py  subroutine_schema.json  wireit.py
dcsred/: dataflow.py  dcs_detector_info.py  dcs_to_JSON.py  dcsdata.py  steps.py
doc/: Makefile  conf.py  field_DSL.md  genapi.py  index.rst  polcor.tex  process.txt  rst_prolog
docker-compose/: Dockerfile  README  httpd-vhosts.conf
examples/: polcorerr.py
explore/: candor_deblur.py  deadtime_fit.py  gaussian_average.py  rebinq.py  sample_reduction.py
extra/: build_conda_packed.sh
gansred/: __init__.py  alignfit.py  dataflow.py  steps.py
lib/: rebin.h  rebin2D.h  rebin2D_test.cc  rebin_test.cc  reduction.cc  setup.py  str2imat.c
ospecred/: FilterableMetaArray.py  MetaArray.py  asterix_filters.py  asterix_loaders.py  dataflow.py  (+6 more)
(+1100 files in other folders)
